infra/k8s/base/900-ticketing-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ticketing-ingress
  namespace: ticketing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ticketing-api.dummy-value.com
      http:
        paths:
          - path: /auth-api
            backend:
              serviceName: auth-service
              servicePort: 3000
